# reto-ia-backend

./: .gitignore  Dockerfile  README.md  diag_humana.py  diag_pager.py  docker-compose.yml  extract_prestadores.py  geocode_prestadores.py  merge_prestadores.py  process_geosalud.py  pyproject.toml  requests.http  scraper_humana.py  scraper_saludsa.py  test_playwright_humana.py  validate_data.py
app/: config.py  database.py  main.py
app/agent/: medical_agent.py  prompts.py
app/api/: hospitals.py  router.py
app/models/: __init__.py  (+3 more)
backend/: .gitignore  docker-compose.yml  pyproject.toml
backend/app/: config.py
backend/app/agent/: medical_agent.py  prompts.py  tools.py
backend/app/api/: chat.py  debug.py  health_plans.py  providers.py  router.py  symptoms.py
backend/app/models/: health_plan.py  hospital.py  medical_rule.py  service.py  specialty.py
backend/app/schemas/: chat.py  structured_response.py
backend/app/services/: copago_service.py  endless_medical_service.py  hospital_service.py  llm_service.py  nlp_service.py  provider_directory.py
backend/app/utils/: audit.py
backend/data/: prestadores_unificados_copago.json  seed_health_plans.json  seed_hospitals.json  seed_specialties.json  seed_specialty_services.json  seed_symptoms.json
backend/scripts/: seed_db.py
backend/tests/: test_services.py
data/: seed_health_plans.json  seed_rules.json  seed_services.json
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
scripts/: download_spacy.py  seed_db.py
tests/: test_api.py
(+35 files in other folders)
