[project]
name = "medical-chatbot-backend"
version = "0.1.0"
description = "Agente conversacional medico - Estimador de Copago y Cobertura"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.55.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "spacy>=3.7.0",
    "rapidfuzz>=3.6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "tests*"]